--- a/about.html
+++ b/about.html
@@ -8,23 +8,62 @@
     </head> 
     <body>
         <header>
-        <img src="img/logo.svg" alt="logo" style="width:200px;height:170px;">
-        <h2> My name is Sruthi Mavuleti.</h2>
-        <h3>Welcome to my portfolio!</h3>
-       <!-- <img src="img/logo.png" alt="myLogo" style="width:300px;height:300px;"> -->
-       <img src="https://placehold.co/200x70" alt="logo" >
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-        <div>
-            <h1> About Page </h1>
-            <img src="https://placehold.co/200x70" alt="About" >
+            <div>
+            <img src="img/logo.svg" alt="logo" style="width:200px;height:170px;">
+            <!-- <img src="img/logo.png" alt="myLogo" style="width:300px;height:300px;"> -->
+            <nav>
+                <ul role="tablist">
+                    <li role="presentation"><a href="index.html" role="tab">Home</a></li>
+                    <li role="presentation"><a href="about.html" role="tab">About Me</a></li>
+                    <li role="presentation"><a href="contact.html"role="tab">Contact</a></li>
+                </ul>
+            </nav>
         </div>
+        </header>
+        <div>
+            <h1> About Me </h1>
+            <p style="font-family:verdana;">
+                <!-- I'm a UX/UI Designer who loves to make creative and attractive designs. I have 5 years of professional experience in researching and designing web applications. Now, I would like to learn to develop web applications.<br>-->
+                 As an experienced UX/UI Designer with five years of professional experience in researching and designing web applications, I am interested in expanding my skillset to include web development. My goal is to enhance my ability to develop designs and to contribute to the success of my organization.
+            </p>
+            <table>
+                <thead>
+                <tr>
+                    <th>Skills</th>
+                    <th>Years of Experience</th>
+                    <th>Expertise</th>
+                </tr>
+            </thead>  
+            <tbody>  
+                <tr>
+                    <td>UX/UI</td>
+                    <td>5 </td>
+                    <td>Advanced</td>
+                </tr>
+                <tr>
+                    <td>HTML5</td>
+                    <td>2</td>
+                    <td>Intermediate</td>
+                </tr>
+                <tr> 
+                    <td>Javascript</td>
+                    <td>1</td>
+                    <td>Intermediate</td>
+                </tr>
+                <tr>
+                   <td> Node.js</td>
+                   <td>1</td>
+                   <td> Beginner</td>
+                </tr>
+                <tr>
+                    <td> Python</td>
+                    <td>1</td>
+                    <td>Beginner</td>
+                </tr>
+            </tbody>
+            </table>
+        </div>
+        <script src="js/tota11y.min.js"></script>
     </body>
 
 </html>
