--- a/index.html
+++ b/index.html
@@ -8,27 +8,29 @@
     </head> 
     <body>
         <header>
-        <img src="img/logo.svg" alt="logo" style="width:200px;height:170px;">
-        <h2> My name is Sruthi Mavuleti.</h2>
-        <h3>Welcome to my portfolio!</h3>
-       <!-- <img src="img/logo.png" alt="myLogo" style="width:300px;height:300px;"> -->
-       <img src="https://placehold.co/200x70" alt="logo" >
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+            <div>
+            <img src="img/logo.svg" alt="logo" style="width:200px;height:170px;">
+            <nav>
+                <ul role="tablist">
+                    <li role="presentation"><a href="index.html" role="tab">Home</a></li>
+                    <li role="presentation"><a href="about.html" role="tab">About Me</a></li>
+                    <li role="presentation"><a href="contact.html"role="tab">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+        </header>
         <!--<div> 
             <a href="index.html">Home</a>
             <a href="about.html">Contact</a>
             <a href="contact.html">Contact</a>
         </div>-->
         <div>
-            <h1> Home Page </h1>
+            <h1> Home  </h1>
+            <h2>Welcome to my portfolio, my name is Sruthi Mavuleti!</h2>
+            <!-- <img src="img/logo.png" alt="myLogo" style="width:300px;height:300px;"> -->
+            <img src="https://placehold.co/200x70" alt="logo">
         </div>
+        <script src="js/tota11y.min.js"></script>
     </body>
 
 </html>
