--- a/index.html
+++ b/index.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title> My Website</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="icon" href="img/initials.png" > 
-    </head> 
-    <body>
-        <header>
-            <div>
-            <img src="img/logo.svg" alt="logo" style="width:200px;height:170px;">
-            <nav>
-                <ul role="tablist">
-                    <li role="presentation"><a href="index.html" role="tab">Home</a></li>
-                    <li role="presentation"><a href="about.html" role="tab">About Me</a></li>
-                    <li role="presentation"><a href="contact.html"role="tab">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-        </header>
-        <!--<div> 
+
+<head>
+    <meta charset="utf-8">
+    <title> My Website</title>
+    <link rel="icon" href="img/initials.png">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul role="tablist">
+                <li role="presentation"><a href="index.html" role="tab" class="active">Home</a></li>
+                <li role="presentation"><a href="about.html" role="tab">About Me</a></li>
+                <li role="presentation"><a href="contact.html" role="tab">Contact</a></li>
+                <li style="float: right; "><img src="img/sruthi-mavuleti.svg" alt="logo"
+                        style="width:300px; margin:-15px;"></li>
+
+            </ul>
+        </nav>
+    </header>
+    <!--<div> 
             <a href="index.html">Home</a>
             <a href="about.html">Contact</a>
             <a href="contact.html">Contact</a>
         </div>-->
-        <div>
-            <h1> Home  </h1>
-            <h2>Welcome to my portfolio, my name is Sruthi Mavuleti!</h2>
-            <!-- <img src="img/logo.png" alt="myLogo" style="width:300px;height:300px;"> -->
-            <img src="https://placehold.co/200x70" alt="logo">
-        </div>
-        <script src="js/tota11y.min.js"></script>
-    </body>
+    <div>
+        <h2>Welcome to my portfolio!</h2>
+    </div>
+    <script src="js/tota11y.min.js"></script>
+</body>
 
 </html>
