--- a/contact.html
+++ b/contact.html
@@ -9,18 +9,18 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header>
-        <nav>
+    <header class="page-header">
+        <img src="img/sruthi-mavuleti.svg" class="page-header-item" alt="logo" style="width:300px; margin:-15px;">
+        <nav class="navigation-list">
             <ul role="tablist">
                 <li role="presentation"><a href="index.html" role="tab">Home</a></li>
+                <li role="presentation"><a href="work.html" role="tab">Work</a></li>
                 <li role="presentation"><a href="about.html" role="tab">About Me</a></li>
-                <li role="presentation"><a href="contact.html" role="tab" class="active">Contact</a></li>
-                <li style="float: right; "><img src="img/sruthi-mavuleti.svg" alt="logo"
-                        style="width:300px; margin:-15px;"></li>
+                <li role="presentation"><a href="contact.html" role="tab" class=" active">Contact</a></li>
 
             </ul>
         </nav>
@@ -51,11 +51,14 @@
             <button type="submit">Submit</button>
         </form>
     </div>
-    <footer>
-        <p> Find me on. </p>
-        <img src="img/GitHub.png" alt="GitHub" style="width:50px;height:50px;">
-        <img src="img/twitter.png" alt="Twitter" style="width:50px;height:50px;">
-        <img src="img/linkedin.png" alt="LinkedIn" style="width:50px;height:50px;">
+
+    <footer class="page-footer">
+        <div>
+            <p> Find me on </p>
+            <img src="img/GitHub.png" alt="GitHub" style="width:35px;height:35px;">
+            <img src="img/twitter.png" alt="Twitter" style="width:35px;height:35px;">
+            <img src="img/linkedin.png" alt="LinkedIn" style="width:35px;height:35px;">
+        </div>
     </footer>
     <script src="js/tota11y.min.js"></script>
 </body>
