Added Animations in About page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 world.
             </h3>
 
-            <a href="" style="color: #064789;">Checkout my resume</a>
+            <a href="work.html" style="color: #064789;" class="link">View my work</a>
         </div>
     </div>
 
