Added Page titles for About, Contact & Work

--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
         </nav>
     </header>
     <div class="aboutme-content">
+        <h1>About Me</h1>
         <p>
             <!-- I'm a UX/UI Designer who loves to make creative and attractive designs. I have 5 years of professional experience in researching and designing web applications. Now, I would like to learn to develop web applications.<br>-->
             As an experienced UX/UI Designer with five years of professional experience in researching and designing web
