--- a/work.html
+++ b/work.html
@@ -25,7 +25,8 @@
             </ul>
         </nav>
     </header>
-
+    <div>
+    <h1>Work Experience</h1>
     <section>
         <div class="grid-container">
             <div class="grid-item">
@@ -79,7 +80,7 @@
 
         </div>
     </section>
-
+</div>
 
     <footer class="page-footer">
         <div>
