--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,8 @@
             </ul>
         </nav>
     </header>
-    <div>
+    <div class="aboutme-content">
+        <h1>Contact</h1>
         Sruthi Mavuleti<br>
         123 House<br>
         City, 00021<br>
