Updated HTML Hint & CSS lint errors

--- a/work.html
+++ b/work.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title> My Website</title>
@@ -25,12 +24,11 @@
             </ul>
         </nav>
     </header>
-    <div>
-    <h1>Work Experience</h1>
+
     <section>
         <div class="grid-container">
             <div class="grid-item">
-                <h4>Mobile web app</h2>
+                <h4>Mobile web app</h4>
                     <p>
                         Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
                         I've created the HTML and CSS templates.
@@ -80,7 +78,7 @@
 
         </div>
     </section>
-</div>
+
 
     <footer class="page-footer">
         <div>
