--- a/about.html
+++ b/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title> My Website</title>
@@ -26,7 +25,6 @@
         </nav>
     </header>
     <div class="aboutme-content">
-        <h1>About Me</h1>
         <p>
             <!-- I'm a UX/UI Designer who loves to make creative and attractive designs. I have 5 years of professional experience in researching and designing web applications. Now, I would like to learn to develop web applications.<br>-->
             As an experienced UX/UI Designer with five years of professional experience in researching and designing web
@@ -1496,7 +1494,6 @@
                 </path>
             </g>
         </svg>
-    </div>
     </div>
     <footer class="page-footer">
         <div>
