--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -25,29 +25,27 @@
             </ul>
         </nav>
     </header>
-    <div class="aboutme-content">
-        <h1>Contact</h1>
+    <div>
         Sruthi Mavuleti<br>
         123 House<br>
         City, 00021<br>
         State<br>
         <br>
-        Tel <a href="tel:+1 308 879 9087" aria-label="Call us at +1 308 879 9087">+1 308 879 9087</a><br>
+        Tel <a href="tel:+13088799087" aria-label="Call us at +1 308 879 9087">+1 308 879 9087</a><br>
         Email Id <a href="abc@gmail.com"> abc@gmail.com</a><br>
         <a href="contactlink">Contact Me</a>
         <br><br>
-
         <!--form with validations-->
         <form action="addcontact" method="post">
             <h3>Leave a Message</h3><br>
             <label for="name"> Name: </label>
-            <input type="name" id="name" name="name" required> <br><br>
+            <input type="text" id="name" name="name" required> <br><br>
 
             <label for="email"> Email id: </label>
             <input type="email" id="email" name="email" required> <br><br>
 
             <label for="message"> Message </label>
-            <textarea type="message" id="message" name="message" required></textarea> <br><br>
+            <textarea id="message" name="message" required></textarea> <br><br>
 
             <button type="submit">Submit</button>
         </form>
