Added Page Titles in About, Work and Contact pages

--- a/work.html
+++ b/work.html
@@ -26,6 +26,8 @@
     </header>
 
     <section>
+        <div style="width: 900px; margin: auto; margin-top: 50px;">
+            <h1>My Work</h1>
         <div class="grid-container">
             <div class="grid-item">
                 <h4>Mobile web app</h4>
@@ -77,6 +79,7 @@
             </div>
 
         </div>
+    </div>
     </section>
 
 
