--- a/work.html
+++ b/work.html
@@ -40,7 +40,7 @@
       </nav>
     </header>
     <div>
-    <h1>Work Experience</h1>
+    <h1>Work Projects</h1>
     <section>
       <div style="width: 900px; margin: auto; margin-top: 50px">
         <h1>My Work</h1>
