Updated Work Projects

--- a/home.html
+++ b/home.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head> 
         <title>My First HTML Site</title>
-        <link rel="icon" href="img/MyInitials.png" > 
+        <link rel="icon" href="imgs/MyInitials.png" > 
     </head>
     <body>
       <h1> Hello World!</h1>
       <div>      
         <p>
-          <img src="img/MyInitials.png" alt="myLogo" style="width:300px;height:300px;">
+          <img src="imgs/MyInitials.png" alt="myLogo" style="width:300px;height:300px;">
 
         </p>  
            <h2> My name is Sruthi Mavuleti.</h2>
