--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title> My Website</title>
-    <link rel="icon" href="img/initials.png">
+    <link rel="icon" href="imgs/initials.png">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300&display=swap"
@@ -14,7 +14,7 @@
 
 <body>
     <header class="page-header">
-        <img src="img/sruthi-mavuleti.svg" class="page-header-item" alt="logo" style="width:300px; margin:-15px;">
+        <img src="imgs/sruthi-mavuleti.svg" class="page-header-item" alt="logo" style="width:300px; margin:-15px;">
         <nav class="navigation-list">
             <ul role="tablist">
                 <li role="presentation"><a href="index.html" role="tab" class=" active">Home</a></li>
@@ -26,7 +26,7 @@
         </nav>
     </header>
     <div class="flex-container">
-        <div> <img src="img/ProfilePic.png" class="profile_pic" alt="Profile pic"></div>
+        <div> <img src="imgs/ProfilePic.png" class="profile_pic" alt="Profile pic"></div>
 
         <div>
             <h1>Welcome to my portfolio!
@@ -45,9 +45,12 @@
     <footer class="page-footer">
         <div>
             <p> Find me on </p>
-            <img src="img/GitHub.png" alt="GitHub" style="width:35px;height:35px;">
-            <img src="img/twitter.png" alt="Twitter" style="width:35px;height:35px;">
-            <img src="img/linkedin.png" alt="LinkedIn" style="width:35px;height:35px;">
+            <a href="https://github.com/smavuleti" target="_blank" rel="noopener noreferrer">
+                <img src="imgs/GitHub.png" alt="GitHub" style="width:35px;height:35px;">
+            </a>
+            <a href="https://www.linkedin.com/in/sruthi-mavuleti-93ab80219/" target="_blank" rel="noopener noreferrer">
+                <img src="imgs/linkedin.png" alt="LinkedIn" style="width:35px;height:35px;">
+            </a>
         </div>
     </footer>
     <script src="js/tota11y.min.js"></script>
