--- a/work.html
+++ b/work.html
@@ -1,139 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>My Website</title>
-    <link rel="icon" href="img/initials.png" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/style.production.css" />
-  </head>
 
-  <body>
-    <header class="page-header">
-      <img
-        src="img/sruthi-mavuleti.svg"
-        class="page-header-item"
-        alt="logo"
-        style="width: 300px; margin: -15px"
-      />
-      <nav class="navigation-list">
-        <ul role="tablist">
-          <li role="presentation"><a href="index.html" role="tab">Home</a></li>
-          <li role="presentation">
-            <a href="work.html" role="tab" class="active">Work</a>
-          </li>
-          <li role="presentation">
-            <a href="about.html" role="tab">About Me</a>
-          </li>
-          <li role="presentation">
-            <a href="contact.html" role="tab">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <div>
-    <h1>Work Projects</h1>
+<head>
+  <meta charset="utf-8" />
+  <title>My Website</title>
+  <link rel="icon" href="imgs/initials.png" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.production.css" />
+</head>
+
+<body>
+  <header class="page-header">
+    <img src="imgs/sruthi-mavuleti.svg" class="page-header-item" alt="logo" style="width: 300px; margin: -15px" />
+    <nav class="navigation-list">
+      <ul role="tablist">
+        <li role="presentation"><a href="index.html" role="tab">Home</a></li>
+        <li role="presentation">
+          <a href="work.html" role="tab" class="active">Work</a>
+        </li>
+        <li role="presentation">
+          <a href="about.html" role="tab">About Me</a>
+        </li>
+        <li role="presentation">
+          <a href="contact.html" role="tab">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <div style="margin: auto; ">
+
     <section>
-      <div style="width: 900px; margin: auto; margin-top: 50px">
-        <h1>My Work</h1>
+
+      <div>
         <div class="grid-container">
           <div class="grid-item">
-            <h4>Pokemon JavaScript App</h4>
-            <p>
-              Web application with HTMl, CSS, and JavaScript that loads data
-              from an exteranl API and display the details. Within this project,
-              I was responsible for the frontend. It’s written in HTML,
-              Bootstrap.
-            </p>
-            <p>
-                Technologies Used: Javascript, HTML, CSS3
-              </p>
-            <a href="https://github.com/smavuleti/simple-js-app"
-              >GitHub Link</a
-            >
+            <h4 class="grid-title">Server-Side API Application</h4>
+            <img src="imgs/Item1.png" alt="Screenshot of MovieBee API project" loading="lazy">
+            <button class="btn-link">
+            <a href="projects/MovieBee-API/movieBeeApi.html">View Project Details</a></button>
           </div>
           <div class="grid-item">
-            <h4>Movie Bee API Application</h4>
-            <p>
-              Backend project developed as a full-stack JavaScript
-              application for managing movie information. This application
-              provides users with details about movies, including genres and
-              directors, and allows them to manage their favorite movies by
-              adding or removing them from their profiles.
-            </p>
-            <p>
-                Technologies Used: Server side JavaScript, Node.js, Web Services, REST API, MongoDB
-              </p>
-            <a href="https://smavuleti-moviebee-479d2e8d7a6f.herokuapp.com/"
-            >Project Link</a
-          ><br>
-            <a href="https://github.com/smavuleti/MovieBee-Heroku"
-              >GitHub Link</a
-            >
+            <h4 class="grid-title">Client Side (React) Application</h4>
+            <img src="imgs/Item2.png" alt="Screenshot of MovieBee API project" loading="lazy">
+            <button class="btn-link">
+            <a href="projects/MovieBee-React/movieBeeReact.html">View Project Details</a></button>
           </div>
           <div class="grid-item">
-            <h4>Movie Bee Client Application</h4>
-            <p>
-              Client side for the Movie Bee application using React. The
-              client interacts with the existing server-side code (REST API and
-              database) to deliver a seamless and responsive user experience.
-            </p>
-            <p>
-                Technologies Used: JavaScript, React, Redux, HTML, SCSS
-              </p>
-            <a href="https://moviebee.netlify.app/"
-            >Project Link</a
-          ><br>
-            <a href="https://github.com/smavuleti/MovieBee-client"
-              >View project on GitHub</a
-            >
+            <h4 class="grid-title">Meet App - Serverless Progressive Web Application (PWA) with React</h4>
+            <img src="imgs/Item3.png" alt="Screenshot of Meet App project" loading="lazy">
+            <button class="btn-link">
+            <a href="projects/meet/meet.html">View Project Details</a></button>
           </div>
           <div class="grid-item">
-            <h4>Meet App</h4>
-            <p>
-              This is a Serverless progressive web app (PWA)
-              built with React using test-driven development (TDD). It
-              integrates with the Google Calendar API to fetch and display
-              upcoming events, offering a fast, responsive, and offline-friendly
-              experience.
-            </p>
-            <p>
-                Technologies Used: Javascript,Gherkin, AWS, Recharts, HTML, CSS
-              </p>
-            <div></div>
-            <a href="https://meet-git-main-sruthis-projects-abf7475f.vercel.app/"
-            >Project Link</a
-          ></br>
-            <a href="https://github.com/smavuleti/meet"
-              >GitHub Link</a
-            >
-
+            <h4 class="grid-title">ChatSphere - Serverless Progressive Web Application (PWA) with React</h4>
+            <img src="imgs/Item4.png" alt="Screenshot of ChatSpere project" loading="lazy">
+            <button class="btn-link">
+            <a href="projects/chat/chat.html">View Project Details</a></button>
           </div>
           <div class="grid-item">
-            <h4>To-Do List App</h4>
-            <p>
-              A user-friendly task management tool designed to
-              help individuals stay organized and productive. With this app,
-              users can effortlessly add new tasks to their list and mark
-              completed tasks by crossing them out. It also allows users to
-              delete tasks that are no longer needed, ensuring the list remains
-              clutter-free. Additionally, the app provides the flexibility to
-              rearrange the order of tasks, enabling users to prioritize items
-              according to their preferences. This simple yet powerful app makes
-              task management seamless and helps users maintain focus on their
-              goals.
-            </p>
-            <a href="https://github.com/smavuleti/to-do-list-app"
-              >GitHub Link</a
-            >
+            <h4 class="grid-title">Client Side (Angular) Application</h4>
+            <img src="imgs/Item5.png" alt="Screenshot of MovieBee API project" loading="lazy">
+            <button class="btn-link">
+            <a href="projects/MovieBee-Angular/movieBeeAngular.html">View Project Details</a></button>
+          </div>
+          <div class="grid-item">
+            <h4 class="grid-title">Pokémon JavaScript App</h4>
+            <img src="imgs/Item6.png" alt="Screenshot of MovieBee API project" loading="lazy">
+            <button class="btn-link">
+            <a href="projects/Pokemon/Pokemon.html">View Project Details</a></button>
           </div>
         </div>
       </div>
@@ -141,24 +78,16 @@
 
     <footer class="page-footer">
       <div>
-        <p>Find me on</p>
-        <img
-          src="img/GitHub.png"
-          alt="GitHub"
-          style="width: 35px; height: 35px"
-        />
-        <img
-          src="img/twitter.png"
-          alt="Twitter"
-          style="width: 35px; height: 35px"
-        />
-        <img
-          src="img/linkedin.png"
-          alt="LinkedIn"
-          style="width: 35px; height: 35px"
-        />
+          <p> Find me on </p>
+          <a href="https://github.com/smavuleti" target="_blank" rel="noopener noreferrer">
+              <img src="imgs/GitHub.png" alt="GitHub" style="width:35px;height:35px;">
+          </a>
+          <a href="https://www.linkedin.com/in/sruthi-mavuleti-93ab80219/" target="_blank" rel="noopener noreferrer">
+              <img src="imgs/linkedin.png" alt="LinkedIn" style="width:35px;height:35px;">
+          </a>
       </div>
-    </footer>
+  </footer>
     <script src="js/tota11y.min.js"></script>
-  </body>
+</body>
+
 </html>
