--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title> My Website</title>
-    <link rel="icon" href="imgs/initials.png">
+    <link rel="icon" href="imgs/initals.png">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300&display=swap"
@@ -14,7 +14,7 @@
 
 <body>
     <header class="page-header">
-        <img src="imgs/sruthi-mavuleti.svg" class="page-header-item" alt="logo" style="width:300px; margin:-15px;">
+        <img src="imgs/logo.svg" class="page-header-item" alt="logo" style="width:300px; margin:-15px;">
         <nav class="navigation-list">
             <ul role="tablist">
                 <li role="presentation"><a href="index.html" role="tab" class=" active">Home</a></li>
@@ -29,13 +29,12 @@
         <div> <img src="imgs/ProfilePic.png" class="profile_pic" alt="Profile pic"></div>
 
         <div>
-            <h1>Welcome to my portfolio!
+            <h1>Welcome to my Full Stack Portfolio!
             </h1>
 
-            <h3> I'm Sruthi, a web developer focused on creating and implementing practical, intuitive applications.
-                Passionate about creating innovative ideas and bringing perfection in coding and improving the human
-                experience in the digital
-                world.
+            <h3> With more than ten years of professional experience as a UX/UI Designer, specializing in the research
+                and design of web applications, along with four years of practical web development experience, I offer a
+                comprehensive perspective on creating user-centered digital solutions.
             </h3>
 
             <a href="work.html" style="color: #064789;" class="link">View my work</a>
