--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title> My Website</title>
-    <link rel="icon" href="imgs/initials.png">
+    <link rel="icon" href="imgs/initals.png">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300&display=swap"
@@ -14,7 +14,7 @@
 
 <body>
     <header class="page-header">
-        <img src="imgs/sruthi-mavuleti.svg" class="page-header-item" alt="logo" style="width:300px; margin:-15px;">
+        <img src="imgs/logo.svg" class="page-header-item" alt="logo" style="width:300px; margin:-15px;">
         <nav class="navigation-list">
             <ul role="tablist">
                 <li role="presentation"><a href="index.html" role="tab">Home</a></li>
@@ -28,9 +28,12 @@
     <div class="aboutme-content">
         <h1>About Me</h1>
         <p>
-            <!-- I'm a UX/UI Designer who loves to make creative and attractive designs. I have 5 years of professional experience in researching and designing web applications. Now, I would like to learn to develop web applications.<br>-->
-            As an experienced UX/UI Designer with five years of professional experience in researching and designing web
-            applications, I am interested in expanding my skillset to include web development.
+            <!-- I'm a UX/UI Designer who loves to make creative and attractive designs. I have 10 years of professional experience in researching and designing web applications.<br>-->
+            <!--As an experienced UX/UI Designer with ten years of professional experience in researching and designing web
+            applications, I am interested in expanding my skillset to include web development.-->
+            With more than ten years of professional experience as a UX/UI Designer, specializing in the research and
+            design of web applications, along with four years of practical web development experience, I offer a
+            comprehensive perspective on creating user-centered digital solutions.
         </p>
         <a href="files/SruthiMavuleti_Resume.pdf" class="button1"> Resume </a>
         <!-- <button class="button1">Resume</button> -->
