--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>My Website</title>
-  <link rel="icon" href="imgs/initials.png" />
+  <link rel="icon" href="imgs/initals.png" />
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300&display=swap"
@@ -14,7 +14,7 @@
 
 <body>
   <header class="page-header">
-    <img src="imgs/sruthi-mavuleti.svg" class="page-header-item" alt="logo" style="width: 300px; margin: -15px" />
+    <img src="imgs/logo.svg" class="page-header-item" alt="logo" style="width: 300px; margin: -15px" />
     <nav class="navigation-list">
       <ul role="tablist">
         <li role="presentation"><a href="index.html" role="tab">Home</a></li>
